평점,반경,필터 뷰 구현 로그인 네비게이션 해결

--- a/ios/Login/LostPasswordViewController.xib
+++ b/ios/Login/LostPasswordViewController.xib
@@ -18,26 +18,20 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sz0-fJ-81v">
-                    <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                    <items>
-                        <navigationItem title="비밀번호 찾기" id="3aP-QD-wKa"/>
-                    </items>
-                </navigationBar>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="example@mangoplate.com" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iM0-B5-q6d">
-                    <rect key="frame" x="20" y="128" width="374" height="34"/>
+                    <rect key="frame" x="20" y="117" width="374" height="34"/>
                     <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="비밀번호를 잊어 버렸나요?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bb5-5e-h3W">
-                    <rect key="frame" x="20" y="181" width="200" height="23"/>
+                    <rect key="frame" x="20" y="170" width="200" height="23"/>
                     <fontDescription key="fontDescription" type="system" pointSize="19"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3sf-Ar-vjh">
-                    <rect key="frame" x="0.0" y="164" width="414" height="2"/>
+                    <rect key="frame" x="0.0" y="153" width="414" height="2"/>
                     <subviews>
                         <view alpha="0.20000000298023224" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="taj-ol-usB">
                             <rect key="frame" x="20" y="0.0" width="374" height="1"/>
@@ -56,19 +50,19 @@
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="비밀번호를 다시 설정하려면 등록한 이메일을 입력해주세요." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mvN-WQ-qTh">
-                    <rect key="frame" x="20" y="212" width="325" height="17"/>
+                    <rect key="frame" x="20" y="201" width="325" height="17"/>
                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="해당 주소로 메일을 보내드립니다." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="11G-QF-sXL">
-                    <rect key="frame" x="20" y="237" width="185" height="17"/>
+                    <rect key="frame" x="20" y="226" width="185" height="17"/>
                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uo5-Gw-BD9">
-                    <rect key="frame" x="75" y="304" width="264" height="40"/>
+                    <rect key="frame" x="75" y="293" width="264" height="40"/>
                     <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <fontDescription key="fontDescription" type="system" pointSize="23"/>
                     <state key="normal" title="보내기">
@@ -78,7 +72,6 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="sz0-fJ-81v" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="5lW-XG-185"/>
                 <constraint firstAttribute="trailing" secondItem="3sf-Ar-vjh" secondAttribute="trailing" id="Bny-Jg-bLs"/>
                 <constraint firstItem="Uo5-Gw-BD9" firstAttribute="top" secondItem="11G-QF-sXL" secondAttribute="bottom" constant="50" id="Ejc-cZ-l5p"/>
                 <constraint firstItem="3sf-Ar-vjh" firstAttribute="top" secondItem="iM0-B5-q6d" secondAttribute="bottom" constant="2" id="F3r-XC-Pkn"/>
@@ -88,12 +81,10 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="iM0-B5-q6d" secondAttribute="trailing" constant="20" id="Zx5-4N-S8p"/>
                 <constraint firstItem="mvN-WQ-qTh" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="bds-6e-OPd"/>
                 <constraint firstItem="Bb5-5e-h3W" firstAttribute="top" secondItem="3sf-Ar-vjh" secondAttribute="bottom" constant="15" id="bvR-bp-MBw"/>
-                <constraint firstItem="iM0-B5-q6d" firstAttribute="top" secondItem="sz0-fJ-81v" secondAttribute="bottom" constant="40" id="evT-L2-KoV"/>
                 <constraint firstItem="iM0-B5-q6d" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="hbt-wl-Cfm"/>
                 <constraint firstItem="Uo5-Gw-BD9" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="75" id="i9Q-m7-d6l"/>
-                <constraint firstItem="sz0-fJ-81v" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="joR-tx-sqi"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Uo5-Gw-BD9" secondAttribute="trailing" constant="75" id="o9w-7j-uJK"/>
-                <constraint firstItem="sz0-fJ-81v" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="pfm-gw-Eke"/>
+                <constraint firstItem="iM0-B5-q6d" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="73" id="qSV-qA-fqn"/>
                 <constraint firstItem="3sf-Ar-vjh" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="rJs-lv-iUH"/>
                 <constraint firstItem="Bb5-5e-h3W" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="rap-L9-r1z"/>
             </constraints>
